small tweak to nerdle modals'

--- a/games/nerdle/index.html
+++ b/games/nerdle/index.html
@@ -263,7 +263,10 @@
 				border-radius: 8px;
 				max-width: 90%;
 				width: 500px;
-				position: relative
+				position: relative;
+				               border-width: 2px;
+				border-style: solid;
+				border-color: var(--text-color);
 			}
 
 			.modal-content h2 {
@@ -334,6 +337,9 @@
                 max-width: 90%;
                 width: 400px;
                 text-align: center;
+                border-width: 2px;
+				border-style: solid;
+				border-color: var(--text-color);
             }
             .last-word {
                 font-size: 2rem;
@@ -385,7 +391,10 @@
 				border-radius: 8px;
 				max-width: 90%;
 				width: 500px;
-				position: relative
+				position: relative;
+				border-width: 2px;
+				border-style: solid;
+				border-color: var(--text-color);
 			}
 
 			.help-content h2 {
