--- a/index.html
+++ b/index.html
@@ -58,16 +58,29 @@
 		    -webkit-font-smoothing: antialiased;
 		    -moz-osx-font-smoothing: grayscale;
 		    letter-spacing: -0.015em;
+		     /* Add padding for iOS safe area */
+			padding-top: env(safe-area-inset-top);
+			padding-bottom: env(safe-area-inset-bottom);
+			padding-left: env(safe-area-inset-left);
+			padding-right: env(safe-area-inset-right);
+			/* Ensure proper viewport height on iOS */
+			min-height: -webkit-fill-available;
+		}
+		
+		html {
+			/* Fix viewport height on iOS */
+			height: -webkit-fill-available;
 		}
 
 		.container {
 		    max-width: 1200px;
 		    margin: 0 auto;
+		        padding-top: max(2rem, env(safe-area-inset-top));
 		}
 
 		header {
 		    text-align: center;
-		    padding: 2rem;
+		    padding-bottom: max(2rem, env(safe-area-inset-top));
 		}
 
 		h1 {
@@ -190,6 +203,7 @@
 		    background: #000;
 		    z-index: 1000;
 		    display: none;
+		    padding-top: env(safe-area-inset-top);
 		}
 
 		.game-iframe {
@@ -200,7 +214,7 @@
 
 		.back-button {
 		    position: fixed;
-		    bottom: 30px;
+		    bottom: 20px;
 		    left: 30px;
 		    z-index: 1001;
 		    background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
@@ -388,74 +402,74 @@
             display: none !important;
         }
 
-.app-prompt {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.75);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-}
+		.app-prompt {
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background: rgba(0, 0, 0, 0.75);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			z-index: 1000;
+			backdrop-filter: blur(5px);
+			-webkit-backdrop-filter: blur(5px);
+		}
 
-.app-prompt-content {
-    background: linear-gradient(135deg, rgba(26, 26, 46, 0.95) 0%, rgba(22, 33, 62, 0.95) 100%);
-    padding: 30px;
-    border-radius: 12px;
-    color: #fff;
-    max-width: 350px;
-    width: 90%;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-}
+		.app-prompt-content {
+			background: linear-gradient(135deg, rgba(26, 26, 46, 0.95) 0%, rgba(22, 33, 62, 0.95) 100%);
+			padding: 30px;
+			border-radius: 12px;
+			color: #fff;
+			max-width: 350px;
+			width: 90%;
+			border: 1px solid rgba(255, 255, 255, 0.1);
+			box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+		}
 
-.app-prompt-content h3 {
-    margin: 0 0 10px 0;
-    font-size: 1.2rem;
-    font-weight: 600;
-    text-align: center;
-}
+		.app-prompt-content h3 {
+			margin: 0 0 10px 0;
+			font-size: 1.2rem;
+			font-weight: 600;
+			text-align: center;
+		}
 
-.app-prompt-content p {
-    margin: 0 0 20px 0;
-    color: #a0a0a0;
-    font-size: 0.9rem;
-    text-align: center;
-    line-height: 1.4;
-}
+		.app-prompt-content p {
+			margin: 0 0 20px 0;
+			color: #a0a0a0;
+			font-size: 0.9rem;
+			text-align: center;
+			line-height: 1.4;
+		}
 
-.app-prompt-button {
-    display: block;
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 8px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 6px;
-    color: #fff;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
+		.app-prompt-button {
+			display: block;
+			width: 100%;
+			padding: 12px;
+			margin-bottom: 8px;
+			background: rgba(255, 255, 255, 0.1);
+			border: 1px solid rgba(255, 255, 255, 0.2);
+			border-radius: 6px;
+			color: #fff;
+			font-weight: 500;
+			cursor: pointer;
+			transition: all 0.3s ease;
+		}
 
-.app-prompt-button:hover {
-    background: rgba(255, 255, 255, 0.2);
-    transform: translateY(-1px);
-}
+		.app-prompt-button:hover {
+			background: rgba(255, 255, 255, 0.2);
+			transform: translateY(-1px);
+		}
 
-.app-prompt-button.secondary {
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
+		.app-prompt-button.secondary {
+			background: transparent;
+			border: 1px solid rgba(255, 255, 255, 0.1);
+		}
 
-.app-prompt-button.secondary:hover {
-    background: rgba(255, 255, 255, 0.05);
-}
+		.app-prompt-button.secondary:hover {
+			background: rgba(255, 255, 255, 0.05);
+		}
 	</style>
 </head>
 <body>
