--- a/games/space-shooter/index.html
+++ b/games/space-shooter/index.html
@@ -186,6 +186,7 @@
             width: 400px;
             box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            margin: 20px;
         }
 
         .overlay-title {
