--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -33,7 +33,7 @@
             width: 100vw;
             height: 100vh;
             max-width: 500px;
-            max-height: 800px;
+            max-height: 100%;
             border: 2px solid #333;
             border-radius: 10px;
             overflow: hidden;
