added space shooter 2'

--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -37,6 +37,7 @@
             border-radius: 10px;
             overflow: hidden;
             background: radial-gradient(circle at 50% 50%, rgba(30, 30, 80, 0.3) 0%, rgba(0, 0, 20, 0.8) 100%);
+            margin: 50px;
         }
 
         canvas {
