--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -30,14 +30,13 @@
 
         #gameContainer {
             position: relative;
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             max-width: 500px;
             border: 2px solid #333;
             border-radius: 10px;
             overflow: hidden;
             background: radial-gradient(circle at 50% 50%, rgba(30, 30, 80, 0.3) 0%, rgba(0, 0, 20, 0.8) 100%);
-            margin: 50px;
         }
 
         canvas {
