--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -32,6 +32,7 @@
             position: relative;
             width: 95%;
             height: 95%;
+            margin-top: -5px;
             max-width: 500px;
             border: 2px solid #333;
             border-radius: 10px;
