added space shooter 2'

--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 			C46.351,35.732,46.833,34.641,47.629,33.917z"></path></g></g></svg>`,
 				mobileOnly: false
 			},
-			spaceShooter: {
+			spaceShooter2: {
 				title: 'Space Shooter II',
 				path: '/games/space-shooter-2/',
 				description: 'Pilot your spaceship and navigate through an asteroid field. Shoot or evade asteroids in this fast-paced arcade challenge.',
