added space shooter 2'

--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -30,12 +30,8 @@
 
         #gameContainer {
             position: relative;
-            width: 95%;
-            height: 95%;
-            margin-top: -10px;
-            max-width: 500px;
-            border: 2px solid #333;
-            border-radius: 10px;
+            width: 100vm;
+            height: 100vh;
             overflow: hidden;
             background: radial-gradient(circle at 50% 50%, rgba(30, 30, 80, 0.3) 0%, rgba(0, 0, 20, 0.8) 100%);
         }
