--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 			spaceShooter2: {
 				title: 'Space Shooter II',
 				path: '/games/space-shooter-2/',
-				description: 'Pilot your spaceship and navigate through an asteroid field. Shoot or evade asteroids in this fast-paced arcade challenge.',
+				description: 'Pilot your upgraded spaceship through dense asteroid fields with enhanced graphics and physics. Dodge or destroy asteroids in this fast-paced arcade sequel, and collect crystals to earn points and boost your score.',
 				icon: `<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" fill="#fff" viewBox="12.368 -0.374 76.099 100" enable-background="new 12.368 -0.374 76.099 100" xml:space="preserve"><g><g><path d="M84.868,64.865c-2.589-2.306-5.567-4.338-8.929-6.021c-1.694-0.85-2.195-1.688-2.01-3.161
 			c1.118-8.796,1.176-17.582-1.221-26.303c-2.966-10.8-9.554-20.312-20.385-29.145c-1.02-0.805-2.88-0.917-4.388,0.305
 			c-4.874,3.951-9.039,8.254-12.42,12.946c-6.002,8.335-8.925,17.25-9.672,26.572c-0.481,5.974-0.067,11.931,0.677,17.882
