updated space shooter II instructions

--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -174,7 +174,10 @@
         </div>
 
         <div id="instructions">
-            Touch and drag to move your ship • Tap to shoot • Collect blue crystals • Destroy red asteroids
+            <div>• Touch and drag to move your ship</div>
+            <div>• Tap to shoot</div>
+            <div>• Collect blue crystals</div>
+            <div>• Destroy red asteroids</div>
         </div>
 
         <div id="gameOver">
