updated space shooter II instructions

--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -174,7 +174,7 @@
         </div>
 
         <div id="instructions">
-            <div>• Touch and drag to move your ship</div>
+            <div>• Drag to move your ship</div>
             <div>• Tap to shoot</div>
             <div>• Collect blue crystals</div>
             <div>• Destroy red asteroids</div>
