--- a/games/space-shooter-2/index.html
+++ b/games/space-shooter-2/index.html
@@ -141,7 +141,7 @@
             background: rgba(0, 0, 0, 0.7);
             padding: 12px 30px;
             border-radius: 8px;
-            text-align: center;
+            text-align: left;
             font-size: 16px;
             font-weight: bold;
             pointer-events: none;
