added Flapping Bird

--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,9 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 			},
 			flappingBird: {
 				title: 'Flapping Bird',
-				path: '/games/sflapping-bird/',
+				path: '/games/flapping-bird/',
 				description: 'Flapping Bird is a simple arcade game where you tap to keep a bird in the air and guide it through gaps between pipes without crashing.',
-				icon: `<svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
+				icon: `<svg width='32' height='32' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
   <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
   <g transform="matrix(0.83 0 0 0.83 12 12)">
     <g>
