--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@ c-84 -42 -203 -88 -209 -82 -2 2 -6 48 -10 101 l-6 98 32 -6 c18 -3 69 -14
 -320 58 -65 20 -65 21 -42 37 60 42 387 160 449 162 13 0 14 -14 9 -97z"/>
 </g>
 </svg>`,
-				mobileOnly: true
+				mobileOnly: false
 			},
 			waveform: {
 				title: 'Waveform',
