updated water ring toss

--- a/games/water-ring-toss/index.html
+++ b/games/water-ring-toss/index.html
@@ -28,11 +28,11 @@
             max-height: calc(100% - 38px);
             background: #f0f8ff;
             border: 8px solid #f44;
-            border-radius: 20px;
             display: flex;
             flex-direction: column;
             touch-action: none;
             overflow: hidden;
+            background-color: #f44;
         }
 
         @media (min-width: 751px) {
