updated water ring toss

--- a/games/water-ring-toss/index.html
+++ b/games/water-ring-toss/index.html
@@ -26,7 +26,7 @@
             margin: 10px auto;
             height: calc(100dvh - 38px);
             max-height: calc(100% - 38px);
-            background: #f0f8ff;
+            background: #f44;
             border: 8px solid #f44;
             border-radius: 10px;
             display: flex;
