--- a/games/water-ring-toss/index.html
+++ b/games/water-ring-toss/index.html
@@ -24,7 +24,7 @@
         #game-container {
             position: relative;
             margin: 10px auto;
-            height: calc(100dvh - 38px);
+            height: 98vh;
             max-height: calc(100% - 38px);
             background: #f44;
             border: 8px solid #f44;
