--- a/games/water-ring-toss/index.html
+++ b/games/water-ring-toss/index.html
@@ -17,14 +17,14 @@
         body {
             min-height: 100vh;
             height: 100%;
-            background: #000;
+            background: #f44;
             overflow: hidden;
         }
 
         #game-container {
             position: relative;
             margin: 10px auto;
-            height: 98vh;
+            height: calc(100dvh - 38px);
             max-height: calc(100% - 38px);
             background: #f44;
             border: 8px solid #f44;
