--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
 			color: #fff;
 			min-height: 100vh;
+			padding: 2rem;
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 			letter-spacing: -0.015em;
@@ -1212,11 +1213,11 @@
 	<!-- RADICAL MOBILE LAYOUT - Completely different experience -->
 	<div class="mobile-app-layout" id="mobileLayout">
 		<!-- Mobile Header -->
-		<div class="mobile-header">
+		<!-- <div class="mobile-header">
 			<div class="mobile-header-content">
 				<div class="mobile-logo">AI Game Collection</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Mobile Main Content -->
 		<div class="mobile-main">
