--- a/index.html
+++ b/index.html
@@ -1213,11 +1213,11 @@
 	<!-- RADICAL MOBILE LAYOUT - Completely different experience -->
 	<div class="mobile-app-layout" id="mobileLayout">
 		<!-- Mobile Header -->
-		<!-- <div class="mobile-header">
+		<div class="mobile-header">
 			<div class="mobile-header-content">
-				<div class="mobile-logo">AI Game Collection</div>
+				<div>AI Game Collection</div>
 			</div>
-		</div> -->
+		</div>
 
 		<!-- Mobile Main Content -->
 		<div class="mobile-main">
