--- a/index.html
+++ b/index.html
@@ -1214,8 +1214,8 @@
 	<div class="mobile-app-layout" id="mobileLayout">
 		<!-- Mobile Header -->
 		<div class="mobile-header">
-			<div class="mobile-header-content">
-				<div>AI Game Collection</div>
+			<div class="">
+				<div class="mobile-logo">AI Game Collection</div>
 			</div>
 		</div>
 
