--- a/index.html
+++ b/index.html
@@ -1213,8 +1213,8 @@
 	<!-- RADICAL MOBILE LAYOUT - Completely different experience -->
 	<div class="mobile-app-layout" id="mobileLayout">
 		<!-- Mobile Header -->
-		<div class="mobile-header">
-			<div class="">
+		<div class="">
+			<div class="mobile-header-content">
 				<div class="mobile-logo">AI Game Collection</div>
 			</div>
 		</div>
