--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 		}
 
 		.mobile-header {
-			position: fixed;
+			/* position: fixed;
 			top: 0;
 			left: 0;
 			right: 0;
@@ -577,7 +577,7 @@
 			backdrop-filter: blur(20px);
 			-webkit-backdrop-filter: blur(20px);
 			border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-			padding: env(safe-area-inset-top) 20px 20px 20px;
+			padding: env(safe-area-inset-top) 20px 20px 20px; */
 		}
 
 		.mobile-header-content {
@@ -1213,7 +1213,7 @@
 	<!-- RADICAL MOBILE LAYOUT - Completely different experience -->
 	<div class="mobile-app-layout" id="mobileLayout">
 		<!-- Mobile Header -->
-		<div class="">
+		<div class="mobile-header">
 			<div class="mobile-header-content">
 				<div class="mobile-logo">AI Game Collection</div>
 			</div>
