--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 		}
 
 		.mobile-header {
-			/* position: fixed;
+			position: fixed;
 			top: 0;
 			left: 0;
 			right: 0;
@@ -577,14 +577,14 @@
 			backdrop-filter: blur(20px);
 			-webkit-backdrop-filter: blur(20px);
 			border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-			padding: env(safe-area-inset-top) 20px 20px 20px; */
+			padding: env(safe-area-inset-top) 20px 20px 20px;
 		}
 
 		.mobile-header-content {
-			display: flex;
+			/* display: flex;
 			align-items: center;
 			justify-content: space-between;
-			padding-top: 20px;
+			padding-top: 20px; */
 		}
 
 		.mobile-logo {
