--- a/index.html
+++ b/index.html
@@ -581,20 +581,13 @@
 		}
 
 		.mobile-header-content {
-			/* display: flex;
+			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			padding-top: 20px; */
+			padding-top: 20px;
 		}
 
-		.mobile-logo {
-			font-size: 1.5rem;
-			font-weight: 900;
-			background: linear-gradient(135deg, #fff 0%, #64ffda 100%);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			background-clip: text;
-		}
+		.mobile-logo {}
 
 		.mobile-main {
 			position: fixed;
