--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 			backdrop-filter: blur(20px);
 			-webkit-backdrop-filter: blur(20px);
 			border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-			/* padding: env(safe-area-inset-top) 20px 20px 20px; */
+			padding: 20px 20px 20px 20px;
 		}
 
 		.mobile-header-content {
