--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
 			<div class="mobile-categories">
 				<div class="mobile-category active">All</div>
 				<div class="mobile-category">Puzzle</div>
-				<div class="mobile-category">Action</div>
+				<div class="mobile-category">Fun</div>
 				<div class="mobile-category">Classic</div>
 				<div class="mobile-category">Arcade</div>
 			</div>
@@ -1871,7 +1871,7 @@
 				path: '/games/water-ring-toss/',
 				description: 'Test your skill and patience in this classic water game! Use precision to land all the rings onto the pegs.',
 				short_description: 'Land rings on pegs with precision.',
-				category: 'arcade',
+				category: 'classic',
 				icon: `<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
  width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
  preserveAspectRatio="xMidYMid meet">
@@ -1964,7 +1964,7 @@ c-84 -42 -203 -88 -209 -82 -2 2 -6 48 -10 101 l-6 98 32 -6 c18 -3 69 -14
 				path: '/games/breakout/',
 				description: 'Break the bricks, level up, and beat your high score! A fast-paced game of skill and strategy.',
 				short_description: 'Break bricks and beat high scores.',
-				category: 'arcade',
+				category: 'classic',
 				icon: `<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
  width="256.000000pt" height="256.000000pt" viewBox="0 0 256.000000 256.000000"
  preserveAspectRatio="xMidYMid meet">
@@ -2022,7 +2022,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				path: '/games/space-shooter/',
 				description: 'Pilot your spaceship and navigate through an asteroid field. Shoot or evade asteroids.',
 				short_description: 'Pilot spaceship through asteroids.',
-				category: 'action',
+				category: 'arcade',
 				icon: `<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" fill="#fff" viewBox="12.368 -0.374 76.099 100" enable-background="new 12.368 -0.374 76.099 100" xml:space="preserve"><g><g><path d="M84.868,64.865c-2.589-2.306-5.567-4.338-8.929-6.021c-1.694-0.85-2.195-1.688-2.01-3.161
 			c1.118-8.796,1.176-17.582-1.221-26.303c-2.966-10.8-9.554-20.312-20.385-29.145c-1.02-0.805-2.88-0.917-4.388,0.305
 			c-4.874,3.951-9.039,8.254-12.42,12.946c-6.002,8.335-8.925,17.25-9.672,26.572c-0.481,5.974-0.067,11.931,0.677,17.882
@@ -2056,7 +2056,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				path: '/games/space-shooter-2/',
 				description: 'Pilot your upgraded spaceship through dense asteroid fields with enhanced graphics.',
 				short_description: 'Enhanced spaceship asteroid action.',
-				category: 'action',
+				category: 'arcade',
 				icon: `<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" fill="#fff" viewBox="12.368 -0.374 76.099 100" enable-background="new 12.368 -0.374 76.099 100" xml:space="preserve"><g><g><path d="M84.868,64.865c-2.589-2.306-5.567-4.338-8.929-6.021c-1.694-0.85-2.195-1.688-2.01-3.161
 			c1.118-8.796,1.176-17.582-1.221-26.303c-2.966-10.8-9.554-20.312-20.385-29.145c-1.02-0.805-2.88-0.917-4.388,0.305
 			c-4.874,3.951-9.039,8.254-12.42,12.946c-6.002,8.335-8.925,17.25-9.672,26.572c-0.481,5.974-0.067,11.931,0.677,17.882
