--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
 				<div class="mobile-category">Puzzle</div>
 				<div class="mobile-category">Arcade</div>
 				<div class="mobile-category">Classic</div>
-				<div class="mobile-category">Fun</div>
+				<div class="mobile-category">Casual</div>
 			</div>
 
 			<!-- Games Grid -->
@@ -1855,7 +1855,7 @@
 				path: '/games/soccer-juggle/',
 				description: 'Keep the soccer ball in the air as long as you can. How many juggles can you achieve?',
 				short_description: 'Keep ball airborne. Count juggles.',
-				category: 'fun',
+				category: 'casual',
 				icon: `<svg xmlns="http://www.w3.org/2000/svg" viewBox="-2500 -2500 5000 5000">
                     <title>soccer ball</title>
                     <g stroke="#000" stroke-width="24">
@@ -1871,7 +1871,7 @@
 				path: '/games/water-ring-toss/',
 				description: 'Test your skill and patience in this classic water game! Use precision to land all the rings onto the pegs.',
 				short_description: 'Land rings on pegs with precision.',
-				category: 'fun',
+				category: 'casual',
 				icon: `<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
  width="512.000000pt" height="512.000000pt" viewBox="0 0 512.000000 512.000000"
  preserveAspectRatio="xMidYMid meet">
@@ -1947,7 +1947,7 @@ c-84 -42 -203 -88 -209 -82 -2 2 -6 48 -10 101 l-6 98 32 -6 c18 -3 69 -14
 				path: '/games/bubble-pop/',
 				description: 'Pop the bubbles before they escape! A fast-paced game of precision and reflexes.',
 				short_description: 'Pop bubbles before they escape.',
-				category: 'fun',
+				category: 'casual',
 				icon: `<svg fill="#fff" height="800px" width="800px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 363.188 363.188" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 363.188 363.188">
   <g>
     <path d="m111.667,132.311c-61.574,0-111.667,50.093-111.667,111.666s50.093,111.667 111.667,111.667 111.667-50.094 111.667-111.667-50.094-111.666-111.667-111.666zm0,208.333c-53.303,0-96.667-43.364-96.667-96.667 0-53.302 43.364-96.666 96.667-96.666s96.667,43.364 96.667,96.666c-0.001,53.303-43.365,96.667-96.667,96.667z"/>
@@ -2090,7 +2090,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				path: '/games/flapping-bird/',
 				description: 'Flapping Bird is a simple arcade game where you tap to keep a bird in the air.',
 				short_description: 'Tap to keep bird flying.',
-				category: 'fun',
+				category: 'arcade',
 				icon: `<svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
   <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
   <g transform="matrix(0.83 0 0 0.83 12 12)">
