--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@
 
 			<!-- Categories -->
 			<div class="mobile-categories">
-				<div class="mobile-category active">All 1</div>
+				<div class="mobile-category active">All</div>
 				<div class="mobile-category">Puzzle</div>
 				<div class="mobile-category">Arcade</div>
 				<div class="mobile-category">Classic</div>
