--- a/index.html
+++ b/index.html
@@ -2091,9 +2091,9 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
 				description: 'Flapping Bird is a simple arcade game where you tap to keep a bird in the air.',
 				short_description: 'Tap to keep bird flying.',
 				category: 'arcade',
-				icon: `<svg width='96' height='96' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
+				icon: `<svg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
   <rect width='24' height='24' stroke='none' fill='#000000' opacity='0'/>
-  <g transform="matrix(0.83 0 0 0.83 12 12)">
+  <g transform="matrix(0.83 0 0 100 12 12)">
     <g>
       <g transform="matrix(1 0 0 1 -6 0.5)">
         <path style="stroke: rgb(255,255,255); stroke-width: 2; fill: none; stroke-linejoin: round; opacity: 1;" transform=" translate(-6, -12.5)" d="M 1 12.5 C 1 15.3 3.2 17.5 6 17.5 C 8.8 17.5 11 15.3 11 12.5 C 11 9.7 8.8 7.5 6 7.5 L 1 7.5 L 1 12.5 Z" stroke-linecap="round" />
@@ -2112,8 +2112,7 @@ m489 -117 c31 -26 31 -78 -1 -104 -22 -18 -39 -19 -226 -16 -220 3 -226 5
       </g>
     </g>
   </g>
-</svg>
-`,
+</svg>`,
 				mobileOnly: false
 			},
 		};
