fixed docker hub link

--- a/index.html
+++ b/index.html
@@ -1187,8 +1187,8 @@
 					Hancock</a>
 			</div>
 			<div class="icon-container">
-				<a href="https://hub.docker.com/repository/docker/bozodev/ai-game-collection/general" target="_blank"
-					class="dockerhub-link" title="Check it out on Docker Hub">
+				<a href="https://hub.docker.com/r/bozodev/ai-game-collection" target="_blank" class="dockerhub-link"
+					title="Check it out on Docker Hub">
 					<svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" viewBox="49 140 442 235">
 						<path stroke="#ffffff" stroke-width="38"
 							d="M296 226h42m-92 0h42m-91 0h42m-91 0h41m-91 0h42m8-46h41m8 0h42m7 0h42m-42-46h42" />
