fixed font size

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
 		}
 
 		.mobile-game-title {
-			font-size: 1rem;
+			font-size: 0.9rem;
 			font-weight: 600;
 			color: white;
 			margin-bottom: 4px;
@@ -1285,8 +1285,8 @@
 							class="mobile-footer-link">Jereme Hancock</a>
 					</p>
 					<div class="mobile-footer-icons">
-						<a href="https://hub.docker.com/r/bozodev/ai-game-collection"
-							target="_blank" class="mobile-footer-icon" title="Docker Hub">
+						<a href="https://hub.docker.com/r/bozodev/ai-game-collection" target="_blank"
+							class="mobile-footer-icon" title="Docker Hub">
 							<svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="49 140 442 235">
 								<path stroke="currentColor" stroke-width="38"
 									d="M296 226h42m-92 0h42m-91 0h42m-91 0h41m-91 0h42m8-46h41m8 0h42m7 0h42m-42-46h42" />
