added deep sea escape

--- a/games/deep-sea-escape/index.html
+++ b/games/deep-sea-escape/index.html
@@ -298,7 +298,7 @@
                 <div class="goal">
                     Glide through coral gaps • Survive the reef<br>
                     Eat fish food and small fish for bonus points!<br>
-                    3 Lives • Level up every 5 points • Earn lives back for each level completed
+                    3 Lives • Level up every 5 points • Earn lives back
                 </div>
 
                 <button id="startBtn">🌊 DIVE IN 🌊</button>
