--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@
 				title: 'Deep Sea Escape',
 				path: '/games/deep-sea-escape/',
 				description: 'Guide your fish through underwater coral reefs in this aquatic adventure. Navigate through coral gaps, collect fish food and small fish for bonus points, and survive the ocean depths with 3 lives. Features progressive difficulty, level-based gameplay, and beautiful underwater scenery with flowing seaweed and bubbles.',
-				short_description: 'Underwater fish adventure. Navigate coral reefs and collect food.',
+				short_description: 'Underwater fish adventure. Navigate yhe coral reefs.',
 				category: 'arcade',
 				icon: `<?xml version="1.0" ?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
 <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 15C3.83333 12.3333 8.8 7 14 7C14.9226 7 15.7539 7.10492 16.5 7.28685M2 9C3.83333 11.6667 8.8 17 14 17C14.9226 17 15.7539 16.8951 16.5 16.7132M16.5 16.7132C19.9595 15.8697 22 12 22 12C22 12 19.9595 8.13032 16.5 7.28685M16.5 16.7132C15.5 15.1667 14.1 11.1163 16.5 7.28685M12 10.5C11.5 11 10.8 12.3 12 13.5" stroke="#FFFFFF" stroke-linecap="round" stroke-width="2"/><path d="M18 11H18.001" stroke="#FFFFFF" stroke-linecap="round" stroke-width="2"/></svg>`,
