added deep sea escape

--- a/games/deep-sea-escape/index.html
+++ b/games/deep-sea-escape/index.html
@@ -288,7 +288,7 @@
         <canvas id="gameCanvas"></canvas>
         <div id="ui">
             <div id="startScreen">
-                <h1>🐠 Deep Sea Escape</h1>
+                <h1>Deep Sea Escape</h1>
                 <div class="subtitle">Navigate the coral maze of the ocean depths</div>
 
                 <div class="controls">
