added deep sea escape

--- a/games/deep-sea-escape/index.html
+++ b/games/deep-sea-escape/index.html
@@ -113,7 +113,7 @@
             padding: 40px 80px;
             border-radius: 20px;
             min-width: 800px;
-            max-width: 99vw;
+            max-width: 98vw;
             border: 3px solid rgba(135, 206, 235, 0.8);
             box-shadow: 0 0 30px rgba(135, 206, 235, 0.3), inset 0 0 20px rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
@@ -289,7 +289,7 @@
         <div id="ui">
             <div id="startScreen">
                 <h1>Deep Sea Escape</h1>
-                <div class="subtitle">Navigate the coral maze of the ocean depths</div>
+                <div class="subtitle">Navigate the coral maze of the ocean</div>
 
                 <div class="controls">
                     🌊 TAP TO SWIM UP 🌊
