fixed deep sea escape description

--- a/index.html
+++ b/index.html
@@ -1531,7 +1531,7 @@
 			deepSeaEscape: {
 				title: 'Deep Sea Escape',
 				path: '/games/deep-sea-escape/',
-				description: 'Guide your fish through underwater coral reefs in this aquatic adventure. Navigate through coral gaps, collect fish food and small fish for bonus points, and survive the ocean depths with 3 lives. Features progressive difficulty, level-based gameplay, and beautiful underwater scenery with flowing seaweed and bubbles.',
+				description: 'Guide your fish through underwater coral reefs in this aquatic adventure.',
 				short_description: 'Underwater fish adventure.',
 				category: 'arcade',
 				icon: `<?xml version="1.0" ?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
